<!--
  ~ Copyright (C) 2015 Antonio Leiva
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.runbuddy.runbuddy.widgets.picasso.GridRecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layoutAnimation="@anim/grid_layout_animation"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>


        <!--android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            style="@style/FabStyle"
            android:layout_gravity="bottom|end" /那个加号的view-->

    </android.support.design.widget.CoordinatorLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">

        <com.runbuddy.runbuddy.view.ChangeIconColor
            android:id="@+id/id_indicator_one"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="#303F9F"
            app:icon="@mipmap/ic_menu_start_conversation"
            app:text="@string/tab_home"
            app:text_size="12sp" />

        <com.runbuddy.runbuddy.view.ChangeIconColor
            android:id="@+id/id_indicator_two"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="#303F9F"
            app:icon="@mipmap/ic_menu_friendslist"
            app:text="@string/tab_home"
            app:text_size="12sp" />

        <com.runbuddy.runbuddy.view.ChangeIconColor
            android:id="@+id/id_indicator_three"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            app:icon="@mipmap/ic_menu_emoticons"
            android:padding="5dp"
            app:color="#303F9F"
            app:text="@string/tab_account"
            app:text_size="12sp" />

        <com.runbuddy.runbuddy.view.ChangeIconColor
            android:id="@+id/id_indicator_four"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:padding="5dp"
            app:color="#303F9F"
            app:icon="@mipmap/ic_menu_allfriends"
            app:text="@string/tab_mine"
            app:text_size="12sp" />
    </LinearLayout>




    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>